fixed issue with custom field db name

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -709,6 +709,9 @@ en:
     label: "Fields"
     field_name: "Field Name"
     display_name: "Display Name"
+    db_name: "DB Name"
+    help_text: "Help Text"
+    actions: "Actions"
     option_strings_text: "Options"
     option_strings_source: "Lookups"
     form_name: "Form Name"
