--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -528,6 +528,13 @@ en:
     messages:
       confirmation: "Are you sure you want to delete this role? Deletion can not be undone. Click OK To Delete Role."
 
+  role:
+    create: "Create Role"
+    edit: "Edit Role"
+    name: "Name"
+    successfully_updated: "Role details are successfully updated."
+    error_in_updating: "Error in updating the Role details."
+
   modules:
     label: "Modules"
 
@@ -540,6 +547,13 @@ en:
 
   primero_programs:
     label: "Program"
+    actions:
+      show_all: "Showing all"
+      show: "Show"
+      edit: "Edit"
+      update: "Update"
+      create: "Create"
+      delete: "Delete"
 
   primero_program:
     create: "Create Program"
@@ -614,12 +628,7 @@ en:
   replications: "Replications"
   provide_translation: "Provide translation for"
 
-  role:
-    create: "Create Role"
-    edit: "Edit Role"
-    name: "Name"
-    successfully_updated: "Role details are successfully updated."
-    error_in_updating: "Error in updating the Role details."
+
   record: "record"
   description: "Description"
   name: "Name"
