--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -696,7 +696,7 @@ en:
       tracing_request: "Tracing Request"
 
   form_section:
-    create: "New Form"
+    create: "New Form Section"
     visibility: "Visibility"
     ordering: "Ordering"
     details: "Form details"
@@ -715,7 +715,7 @@ en:
       updated: "Form section successfully added"
     hide: "Hidden?"
     show: "Show"
-    manage: "Manage Form Sections"
+    manage: "Manage Form Section"
     edit: "Edit Form Sections"
     buttons:
       add: "Add"
