--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -826,6 +826,19 @@ en:
       correct_errors: "Please correct the following errors and resubmit:"
       updated: "Lookup successfully added"
 
+  location:
+    create: "New Location"
+    edit: "Edit Location"
+    label: "Location"
+    index: "Manage Locations"
+    name: "Name"
+    hierarchy: "Hierarchy"
+    confirm_delete: Are you sure you want to delete this location?
+    messages:
+      cannot_create: "Location could not be created"
+      correct_errors: "Please correct the following errors and resubmit:"
+      updated: "Location successfully added"
+
   session:
     about_to_expire: "Your session is about to expire!"
     has_expired: "Your session has expired. Please re-login."
