--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -382,6 +382,7 @@ en:
     reunite_details: "Reunite Details:"
     another_duplicate_before_link: "Another record has been marked as a duplicate of this one. Click"
     another_duplicate_after_link: " to see the duplicate record."
+    violation_status_verified: "Verified"
 
     messages:
       update_success: "Incident was successfully updated."
@@ -949,6 +950,27 @@ en:
     child_status_closed: "Closed"
     child_status_transferred: "Transferred"
     child_status_duplicate: "Duplicate"
+
+  dashboard:
+    no_scheduled_activities: "No Scheduled Activities"
+    scheduled_activities: "Scheduled Activities"
+    case_id: "Case #ID"
+    name: "Name"
+    activity: "Activity"
+    date: "Date"
+    incident_id: "Incident #ID"
+    incident_location: "Incident Location"
+    new_child_assigned_to_you: "New Cases Assigned To You"
+    new_incident_assigned_to_you: "New Incidents Assigned To You"
+    recently_flagged_child: "Recently Flagged Cases"
+    recently_flagged_incident: "Recently Flagged Incidents"
+    incident_status_open: "Open"
+    number_of_victims: "Number Of Victims"
+    number_of_violations: "Number Of Violations"
+    number_of_violations_verified: "Violations Verified"
+    link_see_all_child: "See all %{count} cases >"
+    link_see_all_incident: "See all %{count} incidents >"
+    open_incidents: "Open Incidents"
 
   errors:
 
