--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1155,10 +1155,15 @@ en:
       one:  UNHCR
       selected:  Selected to UNHCR
   imports:
+    password_label: "Password (if required)"
+    format_label: "Format"
     successful: "File was imported successfully"
     error: "Import had the following error: %{error}"
     file_missing: "You must select a file to import"
     unknown_type: "Import filetype unknown or invalid"
+    decrypt_error: "Could not decrypt the file with the given password"
+    zip_file:
+      unknown_type: "The archive contains one or more files with unknown type"
 
   per_page_translation: "Per page _MENU_"
   total: Total
