PRIMERO-469 Export the list view.
Added exporter to export the fields in the current list view index page,
the list of field can be diffent from one user to another due permissions.

1. csv_exporter_list_view.rb - Added exporter of the current list view.
2. export_actions.rb - Update code to retrieve the list of fields according to current list view.
3. application_helper.rb, _button.html.erb - Export List should display only in the index page and added additional params to the exporter.
4. base.rb, incident.rb - Added complementary methods to export the information in the same format as the current list view.
5. Declaring mime type for the current exporter.
6. Added test cases.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1173,6 +1173,9 @@ en:
       all:  PDF
       one:  PDF
       selected:  Selected to PDF
+    list_view_csv:
+      all:  Export List
+      selected:  Selected to CSV
     csv:
       all:  CSV
       one:  CSV
