--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -541,6 +541,7 @@ en:
     logo: 'Logo'
     name: 'Name or Code'
     label: "Agency"
+    successfully_created: "Agency successfully created."
     successfully_updated: "Agency successfully updated."
     drag_n_drop: "You can drag & drop the fields to edit the required order"
     actions:
@@ -552,6 +553,7 @@ en:
       delete: "Delete"
     messages:
       confirmation: "Are you sure you want to delete this agency? Deletion can not be undone. Click OK to delete the agency."
+    select_prompt: "Please select an agency"
 
   primero_modules:
     label: "Modules"
