--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -554,6 +554,7 @@ en:
     messages:
       confirmation: "Are you sure you want to delete this agency? Deletion can not be undone. Click OK to delete the agency."
     select_prompt: "Please select an agency"
+    error_in_updating: "Error in updating the Agency details."
 
   primero_modules:
     label: "Modules"
