added Find Match link on tracing request subform header

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -441,6 +441,7 @@ en:
     unflag_error_message: "Please explain why you are unflagging this record."
     flag_error_message: "Please explain why you are flagging this record."
     flagged_as_suspected: "Flagged by"
+    find_match: "Find Match"
 
     actions:
       change_log: "Change Log"
