PRIMERO-737 FT1 - Export - Name the file. Allow the user provide the file name of the export file. The file name is asked in the password dialog box and it is optional.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -913,6 +913,7 @@ en:
     password_label: "Please enter a password that will encrypt your file."
     password_mandatory: "Enter a valid password"
     password_extra_info: "This password will be associated with the exported file and will need to be entered by anyone opening this file in the future."
+    file_name: "Create your own file name (Optional)"
 
   administration: "Administration"
   new: "New"
