Fix user template. Location label was not correctly displayed. Organization is required now, added records to agency to select in the test cases.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -644,13 +644,14 @@ en:
     new: "New User"
     user_action_history: "User action history"
     no_activity: "has no activity"
+    location: "Location"
+    organization: "Organization"
 
   actions: "actions"
   phone: "Phone"
   email: "Email"
   organization: "Organisation"
   position: "Position"
-  location: "Location"
   false: "false"
   true: "true"
   mandatory_field: "marked fields are mandatory"
