PRIMERO-757 - FT1 - Add Action Buttons to the Dashboard header

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,6 +110,7 @@ en:
      unflag_model: "Unflag %{model}"
      ok: 'OK'
      edit_subform: 'Edit Subform'
+     create_new_record: "Create New %{model}"
 
   placeholders:
     subforms: "Click the edit button to add %{form} details"
