--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -410,7 +410,7 @@ en:
     history_of: "History of %{short_id}"
 
     violation:
-      pending: 'Pending'
+      pending: 'Pending Verification'
       killing: "Killing"
       maiming: "Maiming"
       recruitment: "Recruitment"
