PRIMERO-789 Tracing Request Views.
1. Update Tracing Request View List: Added field Flag and Tracing Request Children.

2. Update Export View List to export correctly Tracing Request Children.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -433,6 +433,7 @@ en:
     change_log: "Change Log"
     name_of_inquirer: "Name of Inquirer"
     date_of_inquiry: "Date of Inquiry"
+    tracing_requests: "Tracing Requests"
     change_log: "Change Log"
     last_updated: "Last updated"
     registered_by: "Registered by"
