added model methods to determine if a lookup is being used on a form section

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1139,6 +1139,7 @@ en:
       lookup:
         value_presence: "Please select at least one lookup value"
         unique_name: "A lookup with that name already exists, please enter a different name"
+        being_used: "This lookup is being used and cannot be deleted"
 
       system_users:
         username_unique: "User name has already been taken! Please select a new User name"
