Added toolbar panel to reports.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -939,8 +939,9 @@ en:
     all: "All"
     total: "Total"
     no_data: "No data exists for this report"
-    types:
-      weekly_report: "Weekly Report"
+    export:
+      graph: "Graph"
+      data: "Data"
 
   encrypt:
     password_title: "Create Password"
