Layering authorizations into reporting.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -711,12 +711,14 @@ en:
       write: "Write"
       flag: "Flag"
       assign: "Assign record owner"
+      report_create: "Build reports"
       case: "Case"
       incident: "Incident"
       tracing_request: "Tracing Request"
       user: "Users, Groups, Roles"
       metadata: "Forms, Lookups"
       system: "System"
+      report: "Report"
       self: "Access only my records"
       group: "Access all records owned by users in my group"
       all: "Access all records"
