Baseline code for editor for reports.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -932,9 +932,10 @@ en:
 
   reports:
     register_new_report: "Create Report"
+    label: "Reports"
 
   report:
-    heading: "RapidFTR Reports"
+    heading: "Primero Reports"
     type: "Type"
     as_of_date: "As of Date"
     download: "Download"
@@ -944,6 +945,8 @@ en:
     export:
       graph: "Graph"
       data: "Data"
+    successfully_updated: "Report configuration is successfully updated."
+    error_in_updating: "Error in updating the Report configuration."
 
   encrypt:
     password_title: "Create Password"
