--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -587,6 +587,7 @@ en:
       delete: "Delete"
     messages:
       confirmation: "Are you sure you want to delete this module? Deletion can not be undone. Click OK to delete the module."
+      invalid: "Invalid module(s)"
 
   primero_module:
     create: "Create Module"
