PRIMERO-942 - QA20.1: Change help text for MRM Violations when there are no nested forms

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -417,6 +417,7 @@ en:
     history_of: "History of %{short_id}"
 
     violation:
+      violation: "Violation"
       pending: 'Pending Verification'
       killing: "Killing"
       maiming: "Maiming"
