--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1262,6 +1262,10 @@ en:
       all:  Excel
       one:  Excel
       selected:  Selected to Excel
+    incident_recorder_xls:
+      all:  Incidents Recorder
+      one:  Incident Recorder
+      selected:  Selected to Incidents Recorder
     json:
       all:  JSON
       one:  JSON
