--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1122,7 +1122,7 @@ en:
       field:
         display_name_presence: "Display name must not be blank"
         display_name_format: "Display name must contain at least one alphabetic characters"
-        name_format: "Field name must contain only lower case alphabetic characters and underscores"
+        name_format: "Field name must contain only lower case alphabetic characters, numbers, and underscores"
         default_value: "Cannot find default value for type "
         has_2_options: "Field must have at least 2 options"
         has_1_option: "Checkbox must have at least 1 option"
