--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,7 @@ en:
      reunite: "Reunite"
      edit: "Edit"
      back: "Back"
+     submit: "Submit"
      export: "Export"
      import: "Import"
      change_password: "Change Password"
@@ -116,6 +117,8 @@ en:
      ok: 'OK'
      edit_subform: 'Edit Subform'
      create_new_record: "Create New %{model}"
+     transfer: "Transfer Case(s)"
+     referral: "Refer Case(s)"
 
   placeholders:
     subforms: "Click the edit button to add %{form} details"
@@ -531,8 +534,6 @@ en:
     sort_by:
       label: "Sort by"
       full_name: "Full Name"
-
-
 
   roles:
     label: "Roles"
@@ -1301,6 +1302,12 @@ en:
     guess_file_type_option: "Autodetect based on file extension"
     zip_file:
       unknown_type: "The archive contains one or more files with unknown type"
+
+  referrals:
+    type_label: "Type of Referral"
+    existing_user_label: "Existing User"
+    other_user_label: "Other User"
+    other_user_agency_label: "Other User's Agency"
 
   per_page_translation: "Per page _MENU_"
   total: Total
