--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1308,6 +1308,9 @@ en:
     existing_user_label: "Existing User"
     other_user_label: "Other User"
     other_user_agency_label: "Other User's Agency"
+    service_label: "Service"
+    remote_primero_label: "Is the remote system a Primero implementation?"
+    notes_label: "Notes"
 
   per_page_translation: "Per page _MENU_"
   total: Total
