Added back see all flags link and changed copy

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1059,8 +1059,8 @@ en:
     number_of_victims: "Number Of Victims"
     number_of_violations: "Number Of Violations"
     number_of_violations_verified: "Violations Verified"
-    link_see_all_child: "See all %{count} cases >"
-    link_see_all_incident: "See all %{count} incidents >"
+    link_see_all_child: "See all flagged cases"
+    link_see_all_incident: "See all flagged incidents"
     open_incidents: "Open Incidents"
     status_of_cases: "Status of Cases"
     case_worker: "Case Worker"
