Fixed issue where having a system generated flags blows up because flagged_by is nil

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1071,7 +1071,8 @@ en:
     missed_cases: "Missed Cases"
     date_of_incident: "Date of Incident"
     violence_type: "Violence Type"
-    date_of_interview: Date of Interview"
+    date_of_interview: "Date of Interview"
+    system_user: "System"
 
   errors:
 
