--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,7 +85,7 @@ en:
      children: "CHILDREN"
      forms: "FORMS"
      lookups: "LOOKUPS"
-     users: "USERS"
+     users: "SETTINGS"
      replications: "SYNC"
      reports: "REPORTS"
      advanced_search: "Advanced Search"
