--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -116,6 +116,8 @@ en:
      ok: 'OK'
      edit_subform: 'Edit Subform'
      create_new_record: "Create New %{model}"
+     bundle_import: "Import Bundle"
+     bundle_export: "Export Bundle"
 
   placeholders:
     subforms: "Click the edit button to add %{form} details"
