--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -393,6 +393,7 @@ en:
     another_duplicate_before_link: "Another record has been marked as a duplicate of this one. Click"
     another_duplicate_after_link: " to see the duplicate record."
     violation_status_verified: "Verified"
+    empty_violation: "To add Violation details, click on the appropriate Violation form then click the Add button"
 
     messages:
       update_success: "Incident %{record_id} was successfully updated."
