--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -951,7 +951,12 @@ en:
     aggregate_by: "Group by Row"
     disaggregate_by: "Group by Column"
     group_ages: "Use age ranges"
-    grpup_dates: "Use date ranges"
+    group_dates_by: "Use date ranges"
+    date_ranges:
+      date: "Day"
+      week: "Week"
+      month: "Month"
+      year: "Year"
     filters:
       label: "Report filters"
       attribute: "Filter"
