--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -945,7 +945,7 @@ en:
     type: "Type"
     as_of_date: "As of Date"
     download: "Download"
-    all: "All"
+    all: "Total"
     total: "Total"
     modules: "Modules"
     aggregate_by: "Group by Row"
