Handle display of transfer and referral history message in Change Log modal

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1229,6 +1229,8 @@ en:
     belong_to: "belonging to"
     because: "because:"
     deleted_by: "deleted by"
+    referral: "Referred to %{to_user} by %{by_user}"
+    transfer: "Transferred to %{to_user} by %{by_user}"
 
     system_logs:
       records_performed_by: "records performed by"
