--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1311,6 +1311,10 @@ en:
       all:  UNHCR
       one:  UNHCR
       selected:  Selected to UNHCR
+    mrm_violation_xls:
+      all:  MRM Violations
+      one:  MRM Violations
+      selected:  Selected to MRM Violations
   imports:
     password_label: "Password (if required)"
     format_label: "Format"
