Reworking violation id linking
 - Linking violations to related field by unique id instead of human text
 - Creating migration to fix up existing records
 - Exposing unique ids on UI
 - Automatically generating UUIDs for dynamically created violations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -709,6 +709,7 @@ en:
   record: "record"
   description: "Description"
   name: "Name"
+  unique_id: "Unique ID"
 
   permissions:
     label: "Permissions"
