--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -931,6 +931,7 @@ en:
       cannot_create: "Location could not be created"
       correct_errors: "Please correct the following errors and resubmit:"
       updated: "Location successfully added"
+      deleted: "Location successfully deleted"
 
   session:
     about_to_expire: "Your session is about to expire!"
@@ -1216,6 +1217,9 @@ en:
       agency:
         unique_name: "An Agency with that name already exists, please enter a different name"
         name_present: "Name or Code must not be blank"
+
+      location:
+        name_present: "must not be blank"
 
 
 
