added Consent Override to roles and permissions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -735,6 +735,7 @@ en:
       self: "Access only my records"
       group: "Access all records owned by users in my group"
       all: "Access all records"
+      consent_override: "Consent override"
 
   forms:
     label: "Forms"
