--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1344,6 +1344,7 @@ en:
     other_user_label: "Other User"
     other_user_agency_label: "Other User's Agency"
     service_label: "Service"
+    consent_override_label: "Do you wish to override this setting?"
     is_remote_label: "Are you referring to a remote system?"
     remote_primero_label: "Is the remote system a Primero implementation?"
     notes_label: "Notes"
@@ -1355,6 +1356,7 @@ en:
     existing_user_label: "Existing User"
     other_user_label: "Other User"
     other_user_agency_label: "Other User's Agency"
+    consent_override_label: "Do you wish to override this setting?"
     is_remote_label: "Are you transferring to a remote system?"
     remote_primero_label: "Is the remote system a Primero implementation?"
     notes_label: "Notes"
