--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -117,8 +117,8 @@ en:
      ok: 'OK'
      edit_subform: 'Edit Subform'
      create_new_record: "Create New %{model}"
-     bundle_import: "Import Bundle"
-     bundle_export: "Export Bundle"
+     bundle_import: "Configuration Bundle"
+     bundle_export: "Configuration Bundle"
      transfer: "Transfer %{model}"
      referral: "Refer %{model}"
 
