--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1337,6 +1337,10 @@ en:
       select_module: Select Module
       choose_fields: Would you like to choose individual fields for a form?
       module_placeholder: Please select a module.
+      empty_password: Please enter a password that will encrypt your file.
+      empty_fields_forms: Please select some forms or fields to export.
+      empty_format: Please select a format to export.
+      empty_module: Please select a module to export.
 
   imports:
     password_label: "Password (if required)"
