Primero-1129: change custom exports submit export

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1333,7 +1333,7 @@ en:
       form_label: Form
       forms: Select Forms to export
       fields: Select Fields to export
-      export_submit: Export
+      submit: OK
       select_module: Select Module
       choose_fields: Would you like to choose individual fields for a form?
       module_placeholder: Please select a module.
