--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1350,6 +1350,8 @@ en:
       empty_fields_forms: Please select some forms or fields to export.
       empty_format: Please select a format to export.
       empty_module: Please select a module to export.
+    pdf_exports:
+      label: PDF
 
   imports:
     password_label: "Password (if required)"
