--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,7 +23,10 @@ en:
     label: "Home"
   clear: "Clear"
   messages:
-    delete_item: "Warning: If you continue, any data associated with this field will be lost.\nIf you\'re uncertain, disable the field instead.\nClick Cancel to go back. Click OK to Delete the field."
+    delete_item: |
+      Warning: If you continue, any data associated with this field will be lost.
+      If you're uncertain, disable the field instead.
+      Click Cancel to go back. Click OK to Delete the field.
     move_item: "You are about to move this field to another form section ({{selection_key}}). Is this OK?"
     enter_valid_date: "Please enter the date in a valid format (dd-mmm-yyyy)"
     enter_valid_field_value: "Please enter a valid field value."
@@ -44,7 +47,10 @@ en:
     logoff_warning_prefix: "You will be logged off in"
     logoff_warning_suffix: "seconds."
     logoff_confirmation: "Do you want to continue your session?"
-    warning: "Warning: If you continue, any data associated with this field will be lost.\nIf you're uncertain, disable the field instead.\nClick Cancel to go back. Click OK to Delete the field."
+    warning: |
+      Warning: If you continue, any data associated with this field will be lost.
+      If you're uncertain, disable the field instead.
+      Click Cancel to go back. Click OK to Delete the field.
     enter_each_in_one_line: "Enter each option on a new line"
     record_count: "Showing %{start} to %{end} of %{total} records"
     form_sections_help_text_for_edit: "Click the EDIT button to add %{form_section_name} details"
