--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -595,11 +595,11 @@ en:
     select_prompt: "Please select an agency"
     error_in_updating: "Error in updating the Agency details."
 
-  primero_locale:
-    label: "Default Language"
-    edit: "Edit Default Language"
-    show: "Default Language"
-    updated: "Default Language was successfully updated."
+  system_settings:
+    label: "System Settings"
+    edit: "Edit System Settings"
+    show: "System Settings"
+    updated: "System Settings successfully updated."
 
   primero_modules:
     label: "Modules"
