Added missing English translations for the dashboard.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1088,8 +1088,10 @@ en:
     no_caseworker_data: "No Case Worker Data"
     no_recently_flagged_child: "No Recently Flagged Cases"
     no_recently_flagged_incident: "No Recently Flagged Incidents"
+    no_open_incidents: "No Open incidents"
     scheduled_activities: "Scheduled Activities"
     overdue_activities: "Overdue Activities"
+    recent_activities: "Recent Activities"
     case_id: "Case #ID"
     name: "Name"
     activity: "Activity"
