PRIMERO-1186 Misleading report validation message.
The key en.couchrest.attributes.report.aggregate_by was the best match for translate the field key on the error messages.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1033,6 +1033,10 @@ en:
       Description: "Description"
       "Remote app url": "Remote app url"
 
+    attributes:
+      report:
+        aggregate_by: "Group by row"
+
     validations:
       blank: "%s must not be blank"
 
